Multiresolution Crashes when appliing more subdivisions #60575

Closed
opened 2019-01-16 20:42:45 +01:00 by Aranzazu Hurtado · 4 comments

Operating system: Windows 10 64 bit
Intel Core i7 870 @ 2.93GHz
16GB RAM
system-info.txt
Graphics card: NVIDIA GTX 1060 6Gb

Broken: blender 2.8, 84c06996a7a, 2019-01-14

Crash when appliing more subdivisions in the Multiresolution modifier.

As I'm trying to sculpt. I have now 5 subdivs, if I put 6, on any object with this Multires modifier with 5, and I want to get an extra subdivision (6), it crashes Blender.0115_Masaki_sculpting_2.8_pose_Final.blend

Operating system: Windows 10 64 bit Intel Core i7 870 @ 2.93GHz 16GB RAM [system-info.txt](https://archive.blender.org/developer/F6308922/system-info.txt) Graphics card: NVIDIA GTX 1060 6Gb Broken: blender 2.8, 84c06996a7a, 2019-01-14 Crash when appliing more subdivisions in the Multiresolution modifier. As I'm trying to sculpt. I have now 5 subdivs, if I put 6, on any object with this Multires modifier with 5, and I want to get an extra subdivision (6), it crashes Blender.[0115_Masaki_sculpting_2.8_pose_Final.blend](https://archive.blender.org/developer/F6308827/0115_Masaki_sculpting_2.8_pose_Final.blend)

Added subscriber: @zutxita

Added subscriber: @zutxita
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2019-01-17 15:14:39 +01:00

This issue was referenced by b2a15de887

This issue was referenced by b2a15de88799f31dfca17c6bb2501be30ec558b3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60575
No description provided.